// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoMapCard should render GeoMap 1`] = `
<div
  className="analytics-geomap"
>
  <GeomapReact
    color={
      Object {
        "value": "total",
      }
    }
    data={
      Object {
        "features": Array [],
      }
    }
    height="232px"
    isEmpty={false}
    metriclabel="Views"
    selected={null}
    width="350px"
  />
  <table
    className="analytics-geomap-table"
  >
    <tbody>
      <tr
        key="0"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          United States
        </td>
        <td
          className="text-right "
        >
          6.91K
           
          <span
            className="percentage font-weight-semibold"
          >
            37.7%
          </span>
        </td>
      </tr>
      <tr
        key="1"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          Brazil
        </td>
        <td
          className="text-right "
        >
          6.27K
           
          <span
            className="percentage font-weight-semibold"
          >
            34.3%
          </span>
        </td>
      </tr>
      <tr
        key="2"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          India
        </td>
        <td
          className="text-right "
        >
          574
           
          <span
            className="percentage font-weight-semibold"
          >
            3.1%
          </span>
        </td>
      </tr>
      <tr
        key="3"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          Spain
        </td>
        <td
          className="text-right "
        >
          490
           
          <span
            className="percentage font-weight-semibold"
          >
            2.7%
          </span>
        </td>
      </tr>
      <tr
        key="4"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          Italy
        </td>
        <td
          className="text-right "
        >
          463
           
          <span
            className="percentage font-weight-semibold"
          >
            2.5%
          </span>
        </td>
      </tr>
      <tr
        key="5"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold text-l-secondary"
        >
          Others
        </td>
        <td
          className="text-right text-l-secondary"
        >
          3.6K
           
          <span
            className="percentage font-weight-semibold"
          >
            19.7%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`GeoMapCard should render GeoMap again when data changes 1`] = `
<div
  className="analytics-geomap"
>
  <GeomapReact
    color={
      Object {
        "value": "total",
      }
    }
    data={
      Object {
        "features": Array [],
      }
    }
    height="232px"
    isEmpty={false}
    metriclabel="Views"
    selected={null}
    width="350px"
  />
  <table
    className="analytics-geomap-table"
  >
    <tbody>
      <tr
        key="0"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          Canada
        </td>
        <td
          className="text-right "
        >
          100
           
          <span
            className="percentage font-weight-semibold"
          >
            100%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`GeoMapCard should render component list with lighten-item class when mouseover on table line 1`] = `
<div
  className="analytics-geomap"
>
  <GeomapReact
    color={
      Object {
        "value": "total",
      }
    }
    data={
      Object {
        "features": Array [],
      }
    }
    height="232px"
    isEmpty={false}
    metriclabel="Views"
    selected={true}
    width="350px"
  />
  <table
    className="analytics-geomap-table"
  >
    <tbody>
      <tr
        key="0"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          United States
        </td>
        <td
          className="text-right "
        >
          6.91K
           
          <span
            className="percentage font-weight-semibold"
          >
            37.7%
          </span>
        </td>
      </tr>
      <tr
        key="1"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold lighten-item"
        >
          Brazil
        </td>
        <td
          className="text-right lighten-item"
        >
          6.27K
           
          <span
            className="percentage font-weight-semibold"
          >
            34.3%
          </span>
        </td>
      </tr>
      <tr
        key="2"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold lighten-item"
        >
          India
        </td>
        <td
          className="text-right lighten-item"
        >
          574
           
          <span
            className="percentage font-weight-semibold"
          >
            3.1%
          </span>
        </td>
      </tr>
      <tr
        key="3"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold lighten-item"
        >
          Spain
        </td>
        <td
          className="text-right lighten-item"
        >
          490
           
          <span
            className="percentage font-weight-semibold"
          >
            2.7%
          </span>
        </td>
      </tr>
      <tr
        key="4"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold lighten-item"
        >
          Italy
        </td>
        <td
          className="text-right lighten-item"
        >
          463
           
          <span
            className="percentage font-weight-semibold"
          >
            2.5%
          </span>
        </td>
      </tr>
      <tr
        key="5"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold lighten-item text-l-secondary"
        >
          Others
        </td>
        <td
          className="text-right lighten-item text-l-secondary"
        >
          3.6K
           
          <span
            className="percentage font-weight-semibold"
          >
            19.7%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`GeoMapCard should render component list without lighten-item class when mouseleave on table line 1`] = `
<div
  className="analytics-geomap"
>
  <GeomapReact
    color={
      Object {
        "value": "total",
      }
    }
    data={
      Object {
        "features": Array [],
      }
    }
    height="232px"
    isEmpty={false}
    metriclabel="Views"
    selected={null}
    width="350px"
  />
  <table
    className="analytics-geomap-table"
  >
    <tbody>
      <tr
        key="0"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          United States
        </td>
        <td
          className="text-right "
        >
          6.91K
           
          <span
            className="percentage font-weight-semibold"
          >
            37.7%
          </span>
        </td>
      </tr>
      <tr
        key="1"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          Brazil
        </td>
        <td
          className="text-right "
        >
          6.27K
           
          <span
            className="percentage font-weight-semibold"
          >
            34.3%
          </span>
        </td>
      </tr>
      <tr
        key="2"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          India
        </td>
        <td
          className="text-right "
        >
          574
           
          <span
            className="percentage font-weight-semibold"
          >
            3.1%
          </span>
        </td>
      </tr>
      <tr
        key="3"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          Spain
        </td>
        <td
          className="text-right "
        >
          490
           
          <span
            className="percentage font-weight-semibold"
          >
            2.7%
          </span>
        </td>
      </tr>
      <tr
        key="4"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold "
        >
          Italy
        </td>
        <td
          className="text-right "
        >
          463
           
          <span
            className="percentage font-weight-semibold"
          >
            2.5%
          </span>
        </td>
      </tr>
      <tr
        key="5"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <td
          className="text-left font-weight-semibold text-l-secondary"
        >
          Others
        </td>
        <td
          className="text-right text-l-secondary"
        >
          3.6K
           
          <span
            className="percentage font-weight-semibold"
          >
            19.7%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`GeoMapCard should render component with empty message 1`] = `
<div
  className="analytics-geomap"
>
  <GeomapReact
    color={
      Object {
        "value": "total",
      }
    }
    data={
      Object {
        "features": Array [],
      }
    }
    height="232px"
    isEmpty={true}
    metriclabel="Views"
    selected={null}
    width="350px"
  />
  <NoResultsDisplay
    title="There are no views on any location on the selected period."
  />
</div>
`;
